--- a/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
@@ -34,6 +34,7 @@ iree_lit_test_suite(
             "hal_interface_constants.mlir",
             "hal_interface_workgroup_info.mlir",
             "illegal_configuration.mlir",
+            "lower_to_accel_ukernel_ops.mlir",
             "peel.mlir",
             "pipeline_pack_unpack_tests.mlir",
             "pipeline_pad_conv_tests.mlir",
