DO NOT SUBMIT: Enable Abseil from cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -822,7 +822,7 @@ else()
   # Add default external projects.
   iree_llvm_add_external_project(mlir-iree-dialects ${CMAKE_CURRENT_SOURCE_DIR}/llvm-external-projects/iree-dialects)
   iree_llvm_add_external_project(stablehlo ${CMAKE_CURRENT_SOURCE_DIR}/third_party/stablehlo)
-  
+
   # Ensure that LLVM-based dependencies needed for testing are included.
   add_dependencies(iree-test-deps FileCheck)
   if(IREE_LLD_TARGET)
@@ -1013,3 +1013,18 @@ endif()
 if(IREE_BUILD_TESTS)
   iree_create_ctest_customization()
 endif()
+
+#-------------------------------------------------------------------------------
+# DO NOT SUBMIT !!!!!!!!!!!!!!1
+#-------------------------------------------------------------------------------
+
+include(FetchContent)
+
+# Abseil
+FetchContent_Declare(
+  abseil
+  GIT_REPOSITORY https://github.com/abseil/abseil-cpp.git
+  GIT_TAG        20230125.3
+)
+FetchContent_MakeAvailable(abseil)
+
